--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
+kotlin.code.style=official
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx2G -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
+android.enableJetifier=true
